# data-science

./: .gitignore  01. [Python] Basic Concepts.ipynb  01. [python] Basic Concepts.ipynb  02. [Python] Classes.ipynb  02. [Python] Data Types.ipynb  02. [python] Data Types.ipynb  03. [Python] Data Structures.ipynb  03. [python] Containers.ipynb  03. [python] Data Structures.ipynb  04. [Python] Objects and Functions.ipynb  04. [python] Objects and Functions.ipynb  05. [Python] External Sources.ipynb  06. [NumPy] Arrays.ipynb  06. [Python] External Sources.ipynb  06. [python] External Sources.ipynb  07. [NumPy] Algebra.ipynb  07. [NumPy] Arrays.ipynb  07. [numpy] Arrays.ipynb  07. [selenium] Web Scraping.ipynb  08. [Matplotlib] Graph Construction.ipynb  08. [NumPy] Algebra.ipynb  08. [NumPy] Statistics.ipynb  08. [matplotlib] Graph Construction.ipynb  08. [numpy] Arrays.ipynb  09. [NumPy] Algebra.ipynb  09. [NumPy] Linear Algebra.ipynb  09. [Pandas] Data Exploratory.ipynb  09. [Scipy] Hypothesis Testing.ipynb  09. [matplotlib] Graph Construction.ipynb  09. [numpy] Linear Algebra.ipynb  10. [NumPy] Probability.ipynb  10. [NumPy] Statistics.ipynb  10. [Pandas] Data Cleaning.ipynb  10. [numpy] Linear Algebra.ipynb  11. [NumPy] Probability.ipynb  11. [NumPy] Statistics.ipynb  11. [Pandas] Data Cleaning.ipynb  11. [Pandas] Data Transformation.ipynb  11. [Scipy] Hypothesis Testing.ipynb  11. [numpy] Probability.ipynb  (+257 more)
.ipynb_checkpoints/: 01. [Python] Basic Concepts-checkpoint.ipynb  02. [Python] Data Types-checkpoint.ipynb  03. [Python] Data Structures-checkpoint.ipynb  (+9 more)
(+587 files in other folders)
