[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dsutil"
authors = [
    {name = "Hung Pham", email = "hung.pq8596@gmail.com"},
    {name = "Linh Pham", email = "linhpt.mc@gmail.com"}
]
description = "A Data Science utility library"
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["dsutil"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}